<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context="com.funebunny.xpdroid.main.ui.activity.CrearRecordatorioActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/fecha"
        android:hint="@string/fecha"
        android:clickable="false"
        android:layout_marginTop="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/datePicker"
        android:src="@drawable/ic_calendar"
        android:contentDescription="@string/calendario"
        android:onClick="mostrarDatePicker"
        android:layout_alignBottom="@+id/fecha"
        android:layout_toRightOf="@+id/fecha"
        android:layout_toEndOf="@+id/fecha" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:ems="10"
        android:id="@+id/horario"
        android:layout_marginTop="31dp"
        android:hint="@string/horario"
        android:layout_below="@+id/fecha"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timePicker"
        android:src="@drawable/ic_time"
        android:contentDescription="@string/reloj"
        android:onClick="mostrarTimePicker"
        android:layout_alignBottom="@+id/horario"
        android:layout_toRightOf="@+id/horario"
        android:layout_toEndOf="@+id/horario" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/repeticion"
        android:hint="@string/repeticion"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/horario"
        android:layout_toLeftOf="@+id/timePicker"
        android:layout_alignLeft="@+id/horario"
        android:layout_alignStart="@+id/horario" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/descripcion"
        android:hint="@string/descripcion"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/repeticion"
        android:layout_alignStart="@+id/repeticion"
        android:layout_alignRight="@+id/repeticion"
        android:layout_alignEnd="@+id/repeticion" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        android:id="@+id/guardar"
        android:onClick="guardarRecordatorio"
        android:layout_marginTop="47dp"
        android:layout_below="@+id/descripcion"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
