<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.funebunny.xpdroid.main.ui.activity.TratarGastoFavoritoActivity"
    android:orientation="vertical"
    android:id="@+id/activity_tratar_gasto_favorito_ll_main">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/activity_tratar_gasto_favorito_rl_descripcion"
        android:layout_weight="1">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/activity_tratar_gasto_favorito_et_descripcion"
            android:layout_centerInParent="true"
            android:hint="@string/descripcion" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/activity_tratar_gasto_favorito_rl_categoria"
        android:layout_weight="1">

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/activity_tratar_gasto_favorito_sp_categoria"
            android:layout_centerInParent="true"
            android:entries="@array/categorias" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/activity_tratar_gasto_favorito_rl_importe"
        android:layout_weight="1">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/activity_tratar_gasto_favorito_et_importe"
            android:layout_centerInParent="true"
            android:hint="@string/importe" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:id="@+id/activity_tratar_gasto_favorito_ll_opciones">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/actualizar"
            android:id="@+id/activity_tratar_gasto_favorito_bt_actualizar"
            android:layout_centerVertical="true"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:onClick="actualizarGastoFavorito" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/eliminar"
            android:id="@+id/activity_tratar_gasto_favorito_bt_eliminar"
            android:layout_alignTop="@+id/button2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:onClick="eliminarGastoFavorito" />
    </LinearLayout>
</LinearLayout>
