<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.funebunny.xpdroid.main.ui.activity.TratarObjetivoActivity"
    android:orientation="vertical"
    android:id="@+id/activity_tratar_objetivo_ll_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/activity_tratar_objetivo_rl_periodo"
        android:layout_weight="1">

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/activity_tratar_objetivo_sp_periodo"
            android:layout_centerInParent="true"
            android:entries="@array/periodo" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/activity_tratar_objetivo_rl_importe"
        android:layout_weight="1">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/activity_tratar_objetivo_et_importe"
            android:hint="@string/importe"
            android:layout_centerInParent="true" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/activity_tratar_objetivo_rl_opciones"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/actualizar"
            android:id="@+id/activity_tratar_objetivo_bt_actualizar"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:onClick="actualizarObjetivo" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/eliminar"
            android:id="@+id/activity_tratar_objetivo_bt_eliminar"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:onClick="eliminarObjetivo" />
    </LinearLayout>
</LinearLayout>
