<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.funebunny.xpdroid.main.ui.activity.TratarGastoActivity"
    android:orientation="vertical"
    android:id="@+id/activity_tratar_gasto_ll_main">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/activity_tratar_gasto_rl_descripcion"
        android:layout_weight="1">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/activity_tratar_gasto_et_descripcion"
            android:layout_centerInParent="true"
            android:hint="@string/descripcion" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:id="@+id/activity_tratar_gasto_rl_fecha">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/activity_tratar_gasto_et_fecha"
            android:layout_centerInParent="true" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/activity_tratar_gasto_ib_date_picker"
            android:src="@drawable/ic_calendar"
            android:layout_alignBottom="@+id/activity_tratar_gasto_et_fecha"
            android:layout_toRightOf="@+id/activity_tratar_gasto_et_fecha"
            android:layout_toEndOf="@+id/activity_tratar_gasto_et_fecha"
            android:onClick="mostrarDatePicker" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:id="@+id/activity_tratar_gasto_rl_categoria">

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/activity_tratar_gasto_sp_categoria"
            android:entries="@array/categorias"
            android:layout_centerInParent="true" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:id="@+id/activity_tratar_gasto_rl_importe">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/activity_tratar_gasto_et_importe"
            android:layout_centerInParent="true"
            android:hint="@string/importe" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:id="@+id/activity_tratar_gasto_ll_opciones">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/actualizar"
            android:id="@+id/activity_tratar_gasto_bt_actualizar"
            android:layout_centerVertical="true"
            android:layout_weight="1"
            android:layout_gravity="center_vertical" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/borrar"
            android:id="@+id/activity_tratar_gasto_bt_borrar"
            android:layout_alignTop="@+id/activity_tratar_gasto_bt_actualizar"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_weight="1"
            android:layout_gravity="center_vertical" />
    </LinearLayout>
</LinearLayout>
